# server/api/controllers/auth/router.ts
@@ -1,5 +1,9 @@
 import express from 'express';
-import controller from './controller'
+import controller from './controller';
+import { checkJwt } from '../../../middleware/login';
 
 export default express.Router()
-    .post('/register' , controller.register);
+    .post('/careCenterRegister' , controller.careCenterRegister)
+    .post('/login' , controller.login)
+    .get('/forgetPassword/:email' ,controller.forgetPassword )
+    .put('/resetPassword', checkJwt , controller.resetPassword);
